@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: srvui.tcl,v 1.7 2000/09/20 00:25:44 welch Exp $
+# RCS: @(#) $Id: srvui.tcl,v 1.8 2004/08/08 02:44:48 welch Exp $
 
 package provide httpd::srvui 1.0
 
@@ -44,6 +44,16 @@ proc SrvUI_Init {title} {
 	label .n$counter -textvariable [CountVarName $counter] -width 0
 	grid .l$counter .n$counter -sticky w
 	grid configure .n$counter -sticky e
+    }
+    # Expose webmaster and debug passwords
+    foreach {varname label} {
+        webmaster_password "webmaster Password"
+        DebugPassword     "debug Password"
+    } {
+	label .l$varname -text $label
+	label .n$varname -textvariable $varname -width 0
+	grid .l$varname .n$varname -sticky w
+	grid configure .n$varname -sticky e
     }
     button .quit -text Quit -command {Httpd_Shutdown ; exit}
     grid .quit -columnspan 2
